--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,7 +46,7 @@ body{
     display: inline-block;
     text-decoration: none;
     padding: 12px 15px;
-    background: #FF0000;
+    background: #000000;
     border-radius: 8px;
     color: #fff;
 }
